Fix mobile navigation spacing

--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,7 @@ a:hover {
 /* navigation menu links */
 .topnav a {
   color: #111113;
-  padding: 14px 18px;
+  padding: 12px 16px;
   text-decoration: none;
   font-size: 20px;
   display: block;
